--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,10 @@
     "animation",
     "library"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ShakrMedia/tuesday/"
+  },
   "license": "MIT",
   "ignore": [
     "**/.*",
