--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tuesday",
-  "id": "tuesday",
+  "name": "tuesday.less",
   "codename": "tuesday",
-  "version": "1.1.0",
+  "id": "tuesday",
+  "version": "1.2.0",
   "description": "A quirky CSS Animation Library by Shakr.",
   "keywords": [
     "tuesday",
