--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-dart-sass": "^1.1.3",
     "grunt-postcss": "^0.9.0",
     "load-grunt-tasks": "^3.1.0"
   }
