--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tuesday.less",
   "codename": "tuesday",
   "id": "tuesday",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "A quirky CSS Animation Library by Shakr.",
   "keywords": [
     "tuesday",
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "https://github.com/ShakrMedia/tuesday/"
   },
-  "homepage": "http://shakrmedia.github.io/tuesday",
+  "homepage": "https://shakrmedia.github.io/tuesday",
   "license": "MIT",
   "author": {
     "name": "Shakr Media Co., Ltd.",
@@ -28,6 +28,7 @@
     "autoprefixer": "^9.8.0",
     "cssnano": "^4.1.10",
     "grunt": "^1.0.4",
+    "grunt-banner": "~0.6.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
